--- a/Scrip/Info.plist
+++ b/Scrip/Info.plist
@@ -22,14 +22,18 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>&quot;请允许使用麦克风&quot;</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>&quot;请允许语音识别&quot;</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>CircularPro-Bold.otf</string>
 		<string>CircularPro-Book.otf</string>
 		<string>CircularPro-Medium.otf</string>
 	</array>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
